Fixed up css directory

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Keuzendeel SWV </title>
-	<link rel = "stylesheet" href ="style.css">
+	<link rel = "stylesheet" href ="css/style.css">
 
 </head>
 <header>
 	<h1> GIT oefenen </h1>
 </header>
+<body>
 <main>
 
 	<button id ="rotateBtn">Rotate</button>
@@ -22,6 +23,7 @@
 	<canvas> id = "mainCanvas" width = 720 height = 480 style = "border:2px solid #666666"</canvas>
 	<script src= "script.js"></script>
 </main>
+</body>
 <footer>
 	<h2>Radius College &copy</h2>
 </footer>
