--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<li> Samenwerken met GIT!</li>
 	</ul>
 	<canvas> id = "mainCanvas" width = 720 height = 480 style = "border:2px solid #666666"</canvas>
-	<script src= "script.js"></script>
+	<script src= "script/script.js"></script>
 </main>
 </body>
 <footer>
