--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 <main>
 
 	<button id ="rotateBtn">Rotate</button>
+
+	<img class id = "bowsetteIMG">
+
+	
+
 	<ul>
 	<li> Wat html maken </li>
 	<li> Beetje CSS </li>
@@ -20,6 +25,7 @@
 	<li> Git geburiken </li>
 	<li> Samenwerken met GIT!</li>
 	</ul>
+	
 	<canvas> id = "mainCanvas" width = 720 height = 480 style = "border:2px solid #666666"</canvas>
 	<script src= "script/script.js"></script>
 </main>
